--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "socket.io": "^2.3.0",
-    "typeorm": "^0.2.21"
+    "typeorm": "^0.2.21",
+    "xmlhttprequest": "^1.8.0"
   }
 }
